Updates for figure numbers and links.  Figure 20 added.

--- a/ZaimaCSS/ZaimaUseCases.html
+++ b/ZaimaCSS/ZaimaUseCases.html
@@ -169,7 +169,7 @@ page sources of the samples appearing here.</p>
   </script></td>
   </tr>
 </table>
-<p><strong>Figure 1</strong> Selot Kidassie p. 129</p>
+<p><strong>Figure 1</strong> Selot Kidassie <a href="http://yacob.org/ethio-ruby/use-cases/SelotKidasie/Pages/SelotKidasiePage129.png">p. 129</a></p>
 </figure>
 
 <h4>Issues:</h4>
@@ -188,10 +188,10 @@ page sources of the samples appearing here.</p>
 <p>Features:</p>
 
 
-<figure class="example">
+<figure class="example figure-wide">
 <table>
-  <col width="250px"/>
-  <col width="180px"/>
+  <col width="230px"/>
+  <col width="230px"/>
   <col width="500px"/>
   <tr>
     <td colspan="2" style="border: 0"></td><th>Alternate Rendering</th>
@@ -209,7 +209,7 @@ page sources of the samples appearing here.</p>
       <rb>በሮ</rb><rt><span>᎓ሞኂ</span></rt>
     </ruby>
     <ruby class="row2ex">
-      <rb>ከ</rb><rt><span>᎖</span></rt>
+      <rb>ከ</rb><rt style="text-align: left;"><span>᎖</span></rt>
       <rb>በሮ</rb><rt><span>ሥቱ</span></rt>
     </ruby>
     <ruby class="row1">
@@ -254,7 +254,7 @@ page sources of the samples appearing here.</p>
       <rb>በሮ</rb><rt><span>᎓ሞኂ</span></rt>
     </ruby>
     <ruby class="row2ex">
-      <rb>ከ</rb><rt><span>᎖</span></rt>
+      <rb>ከ</rb><rt style="text-align: left;"><span>᎖</span></rt>
       <rb>በሮ</rb><rt><span>ሥቱ</span></rt>
     </ruby>
     <ruby class="row1">
@@ -286,7 +286,7 @@ page sources of the samples appearing here.</p>
   </script></td>
   </tr>
 </table>
-<p><strong>Figure 2</strong> Selot Kidassie p. 129</p>
+<p><strong>Figure 2</strong> Selot Kidassie <a href="http://yacob.org/ethio-ruby/use-cases/SelotKidasie/Pages/SelotKidasiePage113.png">p. 113</a></p>
 </figure>
 
 <h4>Issues:</h4>
@@ -416,7 +416,7 @@ page sources of the samples appearing here.</p>
   </script></td>
   </tr>
 </table>
-<p><strong>Figure 3</strong> Selot Kidassie p. 129</p>
+<p><strong>Figure 3</strong> Merha Liqawnt <a href="http://yacob.org/ethio-ruby/use-cases/MerhaLiqawnt/Pages/MerhaLiqawntPage127.png">p. 127</a></p>
 </figure>
 
 <h4>Issues:</h4>
@@ -435,7 +435,7 @@ page sources of the samples appearing here.</p>
 <p><br/></p>
 
 
-    ᎐ ᎓ ᎒ ᎙ ᎑ ᎔ ᎖᎕  ᎗  ᎘<br/>
+<!--    ᎐ ᎓ ᎒ ᎙ ᎑ ᎔ ᎖᎕  ᎗  ᎘ -->
 
 
 <h3>Use Case 4</h3>
@@ -536,7 +536,7 @@ page sources of the samples appearing here.</p>
   </script></td>
   </tr>
 </table>
-<p><strong>Figure 1</strong> Selot Kidassie p. 129</p>
+<p><strong>Figure 4</strong> Merha Liqawnt <a href="http://yacob.org/ethio-ruby/use-cases/MerhaLiqawnt/Pages/MerhaLiqawntPage128.png">p. 128</a></p>
 </figure>
 
 <h4>Issues:</h4>
@@ -622,7 +622,7 @@ page sources of the samples appearing here.</p>
   </script></td>
   </tr>
 </table>
-<p><strong>Figure 1</strong> Selot Kidassie p. 129</p>
+<p><strong>Figure 5</strong> Merha Liqawnt <a href="http://yacob.org/ethio-ruby/use-cases/MerhaLiqawnt/Pages/MerhaLiqawntPage128.png">p. 128</a></p>
 </figure>
 
 <h4>Issues:</h4>
@@ -727,7 +727,7 @@ page sources of the samples appearing here.</p>
   </script></td>
   </tr>
 </table>
-<p><strong>Figure 1</strong> Selot Kidassie p. 129</p>
+<p><strong>Figure 6</strong> Merha Liqawnt <a href="http://yacob.org/ethio-ruby/use-cases/MerhaLiqawnt/Pages/MerhaLiqawntPage23.png">p. 23</a></p>
 </figure>
 
 <h4>Issues:</h4>
@@ -786,7 +786,7 @@ page sources of the samples appearing here.</p>
   </script></td>
   </tr>
 </table>
-<p><strong>Figure 1</strong> Selot Kidassie p. 129</p>
+<p><strong>Figure 7</strong> Merha Liqawnt <a href="http://yacob.org/ethio-ruby/use-cases/MerhaLiqawnt/Pages/MerhaLiqawntPage21.png">p. 21</a></p>
 </figure>
 
 <h4>Issues:</h4>
@@ -912,7 +912,7 @@ page sources of the samples appearing here.</p>
   </script></td>
   </tr>
 </table>
-<p><strong>Figure 1</strong> Selot Kidassie p. 129</p>
+<p><strong>Figure 8</strong> Merha Liqawnt <a href="http://yacob.org/ethio-ruby/use-cases/SelotKidasie/Pages/SelotKidasiePage103.png">p. 103</a></p>
 </figure>
 
 <h4>Issues:</h4>
@@ -1070,7 +1070,7 @@ page sources of the samples appearing here.</p>
   </script></td>
   </tr>
 </table>
-<p><strong>Figure 1</strong> Selot Kidassie p. 129</p>
+<p><strong>Figure 9</strong> Merha Liqawnt <a href="http://yacob.org/ethio-ruby/use-cases/SelotKidasie/Pages/SelotKidasiePage145.png">p. 145</a></p>
 </figure>
 
 <h4>Issues:</h4>
@@ -1202,7 +1202,7 @@ page sources of the samples appearing here.</p>
   </script></td>
   </tr>
 </table>
-<p><strong>Figure 1</strong> Selot Kidassie p. 129</p>
+<p><strong>Figure 10</strong> Selot Kidasie <a href="http://yacob.org/ethio-ruby/use-cases/SelotKidasie/Pages/SelotKidasiePage189.png">p. 189</a></p>
 </figure>
 
 <h4>Issues:</h4>
@@ -1854,7 +1854,7 @@ page sources of the samples appearing here.</p>
   </script></td>
   </tr>
 </table>
-<p><strong>Figure 1</strong> Selot Kidassie p. 129</p>
+<p><strong>Figure 17</strong> Merha Liqawnt p. 84</p>
 </figure>
 
 <h4>Issues:</h4>
@@ -1910,7 +1910,7 @@ page sources of the samples appearing here.</p>
   </script></td>
   </tr>
 </table>
-<p><strong>Figure 1</strong> Selot Kidassie p. 129</p>
+<p><strong>Figure 18</strong> Merha Liqawnt p. 84</p>
 </figure>
 
 <h4>Issues:</h4>
@@ -1956,11 +1956,57 @@ page sources of the samples appearing here.</p>
   </script></td>
   </tr>
 </table>
-<p><strong>Figure 1</strong> Selot Kidassie p. 129</p>
+<p><strong>Figure 19</strong> Merha Liqawnt p. 66</p>
 </figure>
 
 <h4>Issues:</h4>
 <ul>
+  <li></li>
+</ul>
+
+
+<h3>Use Case 20</h3>
+
+<figure class="example">
+<table>
+  <col width="200px"/>
+  <col width="200px"/>
+  <tr>
+  <td><img src="use-cases/SelotKidasiePage9i2.png"/></td>
+  <td valign="bottom">
+    <div style="position: relative; top: 40px;">
+    <ruby class="row2ex">
+      <rb>ቲ</rb><rt><span>᎖</span></rt>
+      <rb>ያን</rb><rt><span>᎒᎓᎒᎖᎒</span></rt>
+    </ruby>
+    <ruby class="row1">
+      <rb>ቲ</rb><rt></rt>
+      <rb>ያ</rb><rt>᎖</rt>
+      <rb>ን</rb><rt>ሰ᎔</rt>፡
+    </ruby>
+    </div>
+  </td>
+  </tr>
+  <tr>
+  <td colspan="2"><script type="text/plain">
+    <ruby class="row2ex">
+      <rb>ቲ</rb><rt><span>᎖</span></rt>
+      <rb>ያን</rb><rt><span>᎒᎓᎒᎖᎒</span></rt>
+    </ruby>
+    <ruby class="row1">
+      <rb>ቲ</rb><rt></rt>
+      <rb>ያ</rb><rt>᎖</rt>
+      <rb>ን</rb><rt>ሰ᎔</rt>፡
+    </ruby>
+  </script></td>
+  </tr>
+</table>
+<p><strong>Figure 20</strong> Selot Kidassie p. 9</p>
+</figure>
+
+<h4>Issues:</h4>
+<ul>
+  <li>Unable to use "ruby-align: space-between;" to distribute ᎒᎓᎒᎖᎒ over ያን.</li>
   <li></li>
 </ul>
 </section>
@@ -1977,34 +2023,10 @@ page sources of the samples appearing here.</p>
           <th scope="col">Other browsers using that engine</th>
         </tr>
         <tr>
-          <td><img src="../../icons/firefox_16x16.png" width="16" height="16" alt="Firefox" title="Firefox"/> Firefox</td>
-          <td>51.0.1</td>
-          <td>Gecko</td>
-          <td>Conkeror, etc.</td>
-        </tr>
-        <tr>
-          <td><img src="../../icons/chrome_16x16.png" width="16" height="16" alt="Chrome" title="Chrome"/> Chrome</td>
-          <td>56.0.2924.87</td>
+          <td><img src="https://w3c.github.io/i18n-drafts/icons/chrome_16x16.png" width="16" height="16" alt="Chrome" title="Chrome"/> Chrome</td>
+          <td>60.0.3112.113</td>
           <td>Blink</td>
           <td>Opera, Vivaldi, etc.</td>
-        </tr>
-        <tr>
-          <td><img src="../../icons/safari_16x16.png" width="16" height="16" alt="Safari" title="Safari"/> Safari</td>
-          <td>10.0.3</td>
-          <td>Webkit</td>
-          <td>iOS-based browsers, Yandex, UC Browser, etc.</td>
-        </tr>
-        <tr>
-          <td><img src="../../icons/edge_16x16.png" width="16" height="16" alt="Edge" title="Edge"/> Edge</td>
-          <td>38.14393</td>
-          <td>EdgeHTML</td>
-          <td>&nbsp;</td>
-        </tr>
-        <tr>
-          <td><img src="../../icons/internet-explorer_16x16.png" width="16" height="16" alt="Edge" title="Edge"/> Internet Explorer</td>
-          <td>11.0</td>
-          <td>Trident</td>
-          <td>&nbsp;</td>
         </tr>
       </tbody>
     </table>
