Completed updates to figure captions.

--- a/ZaimaCSS/ZaimaUseCases.html
+++ b/ZaimaCSS/ZaimaUseCases.html
@@ -1324,7 +1324,7 @@ page sources of the samples appearing here.</p>
   </script></td>
   </tr>
 </table>
-<p><strong>Figure 1</strong> Selot Kidassie p. 129</p>
+<p><strong>Figure 11</strong> Selot Kidasie <a href="http://yacob.org/ethio-ruby/use-cases/SelotKidasie/Pages/SelotKidasiePage213.png">p. 213</a></p>
 </figure>
 
 <h4>Issues:</h4>
@@ -1465,7 +1465,7 @@ page sources of the samples appearing here.</p>
   </script></td>
   </tr>
 </table>
-<p><strong>Figure 1</strong> Selot Kidassie p. 129</p>
+<p><strong>Figure 12</strong> Selot Kidasie <a href="http://yacob.org/ethio-ruby/use-cases/SelotKidasie/Pages/SelotKidasiePage253.png">p. 253</a></p>
 </figure>
 
 <h4>Issues:</h4>
@@ -1524,7 +1524,7 @@ page sources of the samples appearing here.</p>
   </script></td>
   </tr>
 </table>
-<p><strong>Figure 1</strong> Selot Kidassie p. 129</p>
+<p><strong>Figure 13</strong> Selot Kidasie <a href="http://yacob.org/ethio-ruby/use-cases/SelotKidasie/Pages/SelotKidasiePage83.png">p. 83</a></p>
 </figure>
 
 <h4>Issues:</h4>
@@ -1606,7 +1606,7 @@ page sources of the samples appearing here.</p>
   </script></td>
   </tr>
 </table>
-<p><strong>Figure 1</strong> Selot Kidassie p. 129</p>
+<p><strong>Figure 14</strong> Zimarie Wemewasit <a href="http://yacob.org/ethio-ruby/use-cases/ZimarieWemewasit/Pages/ZimarieWemewasitPage68.png">p. 68</a></p>
 </figure>
 
 <h4>Issues:</h4>
@@ -1704,7 +1704,7 @@ page sources of the samples appearing here.</p>
   </script></td>
   </tr>
 </table>
-<p><strong>Figure 1</strong> Selot Kidassie p. 129</p>
+<p><strong>Figure 15</strong> Zimarie Wemewasit <a href="http://yacob.org/ethio-ruby/use-cases/ZimarieWemewasit/Pages/ZimarieWemewasitSecondHalfPage34.png">p. 34</a></p>
 </figure>
 
 <h4>Issues:</h4>
@@ -1811,7 +1811,7 @@ page sources of the samples appearing here.</p>
   </script></td>
   </tr>
 </table>
-<p><strong>Figure 1</strong> Selot Kidassie p. 129</p>
+<p><strong>Figure 16</strong> Zimarie Wemewasit <a href="http://yacob.org/ethio-ruby/use-cases/ZimarieWemewasit/Pages/ZimarieWemewasitSecondHalfPage34.png">p. 34</a></p>
 </figure>
 
 <h4>Issues:</h4>
@@ -1854,7 +1854,7 @@ page sources of the samples appearing here.</p>
   </script></td>
   </tr>
 </table>
-<p><strong>Figure 17</strong> Merha Liqawnt p. 84</p>
+<p><strong>Figure 17</strong> Merha Liqawnt <a href="http://yacob.org/ethio-ruby/use-cases/MerhaLiqawnt/Pages/MerhaLiqawntPage84.png">p. 84</a></p>
 </figure>
 
 <h4>Issues:</h4>
@@ -1910,7 +1910,7 @@ page sources of the samples appearing here.</p>
   </script></td>
   </tr>
 </table>
-<p><strong>Figure 18</strong> Merha Liqawnt p. 84</p>
+<p><strong>Figure 18</strong> Merha Liqawnt <a href="http://yacob.org/ethio-ruby/use-cases/MerhaLiqawnt/Pages/MerhaLiqawntPage84.png">p. 84</a></p>
 </figure>
 
 <h4>Issues:</h4>
@@ -1956,7 +1956,7 @@ page sources of the samples appearing here.</p>
   </script></td>
   </tr>
 </table>
-<p><strong>Figure 19</strong> Merha Liqawnt p. 66</p>
+<p><strong>Figure 19</strong> Merha Liqawnt <a href="http://yacob.org/ethio-ruby/use-cases/MerhaLiqawnt/Pages/MerhaLiqawntPage66.png">p. 66</a></p>
 </figure>
 
 <h4>Issues:</h4>
@@ -2001,7 +2001,7 @@ page sources of the samples appearing here.</p>
   </script></td>
   </tr>
 </table>
-<p><strong>Figure 20</strong> Selot Kidassie p. 9</p>
+<p><strong>Figure 20</strong> Selot Kidasie <a href="http://yacob.org/ethio-ruby/use-cases/SelotKidasie/Pages/SelotKidasiePage9.png">p. 9</a></p>
 </figure>
 
 <h4>Issues:</h4>
